--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     volumes:
       - ./workspace:/workdir
       - ..:/workdir/cerebri
+      - .vscode:/workdir/.vscode
     devices:
       - /dev/net/tun:/dev/net/tun
     cap_add:
