--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -11,6 +11,6 @@ services:
     devices:
       - /dev/net/tun:/dev/net/tun
     cap_add:
-      - NET_ADMIN
+      - all
     sysctls:
       - net.ipv6.conf.all.disable_ipv6=0
