--- a/protobuf_uart/CMakeLists.txt
+++ b/protobuf_uart/CMakeLists.txt
@@ -2,6 +2,10 @@
 
 cmake_minimum_required(VERSION 3.20.0)
 
+set(ZEPHYR_EXTRA_MODULES ${CMAKE_CURRENT_SOURCE_DIR}/../modules/tinyframe)
+#set(MODULE_EXT_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/..)
+
+
 set(ENV{PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION} python)
 message(STATUS "env: $ENV{PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION}")
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
