--- a/echo_client/prj.conf
+++ b/echo_client/prj.conf
@@ -1,8 +1,13 @@
 CONFIG_NETWORKING=y
 CONFIG_NET_UDP=y
-CONFIG_NET_TCP=y
-CONFIG_NET_IPV6=y
+CONFIG_NET_TCP=n
+CONFIG_NET_IPV6=n
 CONFIG_NET_IPV4=y
+
+CONFIG_NET_SOCKETS=y
+CONFIG_NET_SOCKETS_POSIX_NAMES=y
+CONFIG_NET_SOCKETS_POLL_MAX=4
+CONFIG_NET_CONNECTION_MANAGER=n
 
 CONFIG_ENTROPY_GENERATOR=y
 CONFIG_TEST_RANDOM_GENERATOR=y
@@ -18,20 +23,25 @@ CONFIG_NET_PKT_TX_COUNT=32
 CONFIG_NET_BUF_RX_COUNT=32
 CONFIG_NET_BUF_TX_COUNT=32
 
-CONFIG_NET_IF_UNICAST_IPV6_ADDR_COUNT=3
-CONFIG_NET_IF_MCAST_IPV6_ADDR_COUNT=4
+#CONFIG_NET_IF_UNICAST_IPV6_ADDR_COUNT=3
+#CONFIG_NET_IF_MCAST_IPV6_ADDR_COUNT=4
 CONFIG_NET_MAX_CONTEXTS=10
 
 CONFIG_NET_SHELL=y
 
 CONFIG_NET_CONFIG_SETTINGS=y
-CONFIG_NET_CONFIG_NEED_IPV6=y
+CONFIG_NET_CONFIG_NEED_IPV6=n
 CONFIG_NET_CONFIG_NEED_IPV4=y
-CONFIG_NET_CONFIG_MY_IPV6_ADDR="2001:db8::1"
-CONFIG_NET_CONFIG_PEER_IPV6_ADDR="2001:db8::2"
+#CONFIG_NET_CONFIG_MY_IPV6_ADDR="2001:db8::1"
+#CONFIG_NET_CONFIG_PEER_IPV6_ADDR="2001:db8::2"
 CONFIG_NET_CONFIG_MY_IPV4_ADDR="192.0.2.1"
 CONFIG_NET_CONFIG_PEER_IPV4_ADDR="192.0.2.2"
 
+# native posix
 CONFIG_NET_L2_ETHERNET=y
 CONFIG_ETH_NATIVE_POSIX=y
 CONFIG_ETH_NATIVE_POSIX_RANDOM_MAC=y
+CONFIG_NO_OPTIMIZATIONS=y
+CONFIG_ASAN=y
+CONFIG_SYS_CLOCK_TICKS_PER_SEC=1000
+CONFIG_NATIVE_POSIX_SLOWDOWN_TO_REAL_TIME=n
